fixed horizontal scroll

--- a/Assets/css/custom.css
+++ b/Assets/css/custom.css
@@ -779,9 +779,9 @@ body {
 /* line 2, C:/Bitnami/wampstack-7.0.30-1/apache2/htdocs/woorides/Assets/css/scss/home/_valueProp-break.scss */
 #valueProp-break-section {
   max-width: 100vw;
-  width: 100vw;
+  width: auto;
   background-color: #132747;
-  padding: 60px 0;
+  padding: 60px 15px;
   margin-bottom: 75px; }
   @media screen and (min-width: 1000px) {
     /* line 2, C:/Bitnami/wampstack-7.0.30-1/apache2/htdocs/woorides/Assets/css/scss/home/_valueProp-break.scss */
