--- a/Assets/css/scss/home/_valueProp-break.scss
+++ b/Assets/css/scss/home/_valueProp-break.scss
@@ -1,9 +1,9 @@
 
 #valueProp-break-section {
 	max-width: 100vw;
-	width: 100vw;
+	width: auto;
 	background-color: $theme-color-blue;
-	padding: 60px 0;
+	padding: 60px 15px;
 	margin-bottom: 75px;
 	@media screen and (min-width: 1000px) {
 		margin-bottom: 50px;
